GearsetPOC/force-app/main/default/objects/Additional_Question__c/Additional_Question__c.object-meta.xml
<CustomObject>
    <description>Created under Epic SFDCI-1328 for the Customer Service Team to work with FormAssembly. Child Object to Survey and Assessment</description>
    <label>Additional Question</label>
    <nameField>
        <displayFormat>AQ-{000000}</displayFormat>
        <label>Additional Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>