GearsetPOC/force-app/main/default/objects/Additional_Question__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <formula>IF(OR(ISBLANK(Number__c), Number__c == 0), &#39;&#39;, TEXT(Number__c) + &#39; &#39;) + IF(ISNULL(Date__c), &#39;&#39;, TEXT(Date__c) + &#39; &#39;) + IF(ISNULL(Date_Time__c), &#39;&#39;, TEXT(Date_Time__c) + &#39; &#39;) + IF(ISBLANK(Text__c), &#39;&#39;, Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer</label>
    <type>Text</type>
</CustomField>