GearsetPOC/force-app/main/default/objects/Additional_Question__c/fields/Long_Question__c.field-meta.xml
<CustomField>
    <fullName>Long_Question__c</fullName>
    <label>Long Question</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>