GearsetPOC/force-app/main/default/objects/Additional_Question__c/fields/Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Long_Text__c</fullName>
    <label>Long Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>