GearsetPOC/force-app/main/default/objects/Additional_Question__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>