GearsetPOC/force-app/main/default/objects/Additional_Question__c/fields/Survey_and_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Survey_and_Assessment__c</fullName>
    <label>Survey and Assessment</label>
    <referenceTo>Survey_and_Assessment__c</referenceTo>
    <relationshipLabel>Additional Questions</relationshipLabel>
    <relationshipName>Additional_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>