GearsetPOC/force-app/main/default/objects/Additional_Question__c/recordTypes/Date.recordType-meta.xml
<RecordType>
    <fullName>Date</fullName>
    <active>true</active>
    <label>Date</label>
</RecordType>