GearsetPOC/force-app/main/default/objects/Additional_Question__c/recordTypes/Date_Time.recordType-meta.xml
<RecordType>
    <fullName>Date_Time</fullName>
    <active>true</active>
    <label>Date/Time</label>
</RecordType>