GearsetPOC/force-app/main/default/objects/Additional_Question__c/recordTypes/Number.recordType-meta.xml
<RecordType>
    <fullName>Number</fullName>
    <active>true</active>
    <label>Number</label>
</RecordType>