GearsetPOC/force-app/main/default/objects/Additional_Question__c/recordTypes/Text.recordType-meta.xml
<RecordType>
    <fullName>Text</fullName>
    <active>true</active>
    <label>Text</label>
</RecordType>